# Froxgel

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  colorgen.py  controls.cpp  controls.h  generator.cpp  generator.h  helpers.cpp  helpers.h  lighting.cpp  lighting.h  main.cpp  marching_cubes.cpp  marching_cubes.h  marching_cubes_tables.h  mesh.cpp  mesh.h  polygons.cpp  polygons.h  shader.h  skybox.cpp  skybox.h  window.cpp  window.h
shaders/: base_frag.glsl  base_tex_frag.glsl  base_tex_vert.glsl  base_vert.glsl  common.glsl  density_comp.glsl  depth_frag.glsl  depth_vert.glsl  marching_cubes_comp.glsl  marching_cubes_frag.glsl  marching_cubes_vert.glsl  perlin_comp.glsl  screen_frag.glsl  screen_vert.glsl  simple_lighting_frag.glsl  simple_lighting_vert.glsl  skybox_frag.glsl  skybox_vert.glsl
